# cek

./: CHANGELOG.md  cek.cabal
app/: Main.hs
src/: CEKMachine.hs  Parser.hs  Syntax.hs  TypeChecker.hs
test/: Main.hs
