cabal-version:      3.4
name:               cek
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Shota Arakaki
maintainer:         syotaa1@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CEKMachine,
                      Parser,
                      Syntax,
                      TypeChecker
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      bytestring,
                      containers,
                      effectful,
                      trifecta
    hs-source-dirs:   src
    default-language: GHC2021

executable cek
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        haskeline,
        bytestring,
        text,
        prettyprinter,
        ansi-terminal,
        trifecta,
        mtl,
        cek

    hs-source-dirs:   app
    default-language: GHC2021

test-suite cek-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hspec,
        QuickCheck,
        trifecta,
        bytestring,
        cek
